<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context="com.umsa.proyecto391.MainActivity">

        <include layout="@layout/toolbar"/>

        <!--Method 1-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_method1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#FC566F">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.umsa.proyecto391.views.XTextViewBold
                    android:id="@+id/titulo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/cuadrados_medios"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <com.umsa.proyecto391.views.XTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/titulo1"
                    android:text="@string/requisitos1"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/method1"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Method 2-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_method2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#2BCFB8">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.umsa.proyecto391.views.XTextViewBold
                    android:id="@+id/titulo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/congruencial_mixto"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <com.umsa.proyecto391.views.XTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/titulo2"
                    android:text="@string/requisitos2"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/method2"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <!--Method 3-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_method3"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#25DFDD">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.umsa.proyecto391.views.XTextViewBold
                    android:id="@+id/titulo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="100dp"
                    android:text="@string/congruencial_multiplicativo"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <com.umsa.proyecto391.views.XTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@id/titulo3"
                    android:textColor="@android:color/white"
                    android:text="@string/requisitos3"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/method3"/>


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Method 4-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_method4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#FDDB7F">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.umsa.proyecto391.views.XTextViewBold
                    android:id="@+id/titulo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/binario"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <com.umsa.proyecto391.views.XTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@id/titulo4"
                    android:textColor="@android:color/white"
                    android:text="@string/requisitos4"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/method5"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>